--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,8 @@ dependencies {
     implementation 'com.android.support:design:29.0.0'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    //firebase Ui
+    implementation 'com.firebaseui:firebase-ui-database:4.3.1'
+
+
 }
