--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,10 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".complainList"
-            android:theme="@style/Theme.AppCompat.NoActionBar"></activity>
+        <activity android:name=".AddComplain"></activity>
+        <activity
+            android:name=".complainList"
+            android:theme="@style/Theme.AppCompat.NoActionBar" />
         <activity
             android:name=".addExpencesList"
             android:theme="@style/hisabPageTheme" />
